--- a/IndexLogin.html
+++ b/IndexLogin.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nombre+de+la+fuente" rel="stylesheet">
 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> <!--Favicon-->
-    <link rel="stylesheet" href="css/style.css"> <!--Hoja de estilos-->
+    <link rel="stylesheet" href="css/estiloInicioSesion"> <!--Hoja de estilos-->
     <title>ProyectoCAC</title>
     <title>Iniciar Sesión CaCBooks</title>
     </head>
