--- a/IndexLogin.html
+++ b/IndexLogin.html
@@ -5,52 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f7fb471b65.js"></script> <!--Icono-->
     <link href="https://fonts.googleapis.com/css2?family=Nombre+de+la+fuente" rel="stylesheet">
-
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> <!--Favicon-->
-    <link rel="stylesheet" href="css/estiloInicioSesion"> <!--Hoja de estilos-->
-    <title>ProyectoCAC</title>
+    <link rel="stylesheet" href="css/estiloInicioSesion.css"> <!--Hoja de estilos-->
+    <link rel="stylesheet" href="css/estiloprincipal.css"> <!--Hoja de estilos-->
     <title>Iniciar Sesión CaCBooks</title>
-    </head>
-
-    <body class="bodyRegistrarse">
-        <header class="headerRegistrarse">
-            <a class="anclaLogo" href="">
-                <i class="fas fa-film" aria-hidden="true"></i>
-                <span>CaCBooks</span>
-            </a>
-        </header> 
-       
-       <!-- Sección Iniciar Sesión -->
-
-        <main id= "main" class="main">
-       <div class="login-modal">
-    <form id="loginForm">
-        <h2 class="tituloIniciarSesion">Iniciar Sesión</h2>
-
-        <div class="input-group">
-            <input type="email" id="email" name="email" placeholder="Email" required>
-            <div class="error-text"></div>
+    <!--boton wtp-->
+    <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+</head>
+<body class="bodyRegistrarse">
+    <header class="headerRegistrarse">
+        <a class="anclaLogo" href="index.html">
+            <a href="index.html" class="fa fa-book">CAC BOOKS</a>
+    </header>
+    
+    <!-- Sección Iniciar Sesión -->
+    <main id="main" class="main">
+        <div class="login-modal">
+            <form action="" method="get">
+                <h2 class="tituloIniciarSesion">Iniciar Sesión</h2>
+                <div class="input-group">
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <div class="error-text"></div>
+                </div>
+                <div class="input-group">
+                    <input type="password" id="password" name="password" placeholder="Contraseña" required>
+                    <div class="error-text"></div>
+                </div>
+                <button type="submit" class="login-btn">Iniciar Sesión</button>
+                <p class="register-link">No tienes cuenta? <a href="registrarse.html">Registrate</a></p>
+            </form>
         </div>
+    </main>
 
-        <div class="input-group">
-            <input type="password" id="password" name="password" placeholder="Contraseña" required>
-            <div class="error-text"></div>
-        </div>
-
-        <button type="submit" class="login-btn">Iniciar Sesión</button>
-        <p class="register-link">No tienes cuenta? <a href="registrarse.html">Registrate</a></p>
-    </div>
-    </form> 
- </main>
-
-            <!-- Sección de Conexión a API 
-            <section id="apiData">
-                <h2>Datos de la API</h2>
-                <div id="dataContainer"></div>
-            </section> --> 
-    </body>
-</div>
-    <script src="validar.js"></script>
- 
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script src="/js/validariniciosesion.js"></script>
 </body>
 </html>
